# composer-toolkit

./: README.md  olivier_messiaen_quatuor.xml  pyproject.toml
composer_toolkit/: canon.py  hocket.py  isorhythm.py  lyric_tools.py  minimalism.py  scales.py  sequences.py  set_theory.py  tintinnabuli.py  tools.py  transformations.py
samples/coming together/: frederic_rzewski_coming_together.py
samples/composition_001/: composition.py  composition_001.py  composition_002.py  composition_003.py
samples/fratres/: arvo_part_fratres.py
samples/isorhythm/: canon-example.py
samples/quatuor pour la fin du temps/: olivier_messiaen_quatuor.py
samples/rhythmic-examples/: canon-example.py  hocket-example.py  isorhythm-example.py
tests/: test_isorhythm.py  test_minimalism.py  test_tintinnabuli.py  test_tools.py  test_transformations.py
