[tool.poetry]
name = "composer-toolkit"
version = "0.0.0"
description = ""
authors = ["syntrice <syntrice@protonmail.com>"]
readme = "README.md"
packages = [{include = "composer_toolkit"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
