[tool.poetry]
name = "composer-toolkit"
version = "0.0.0"
description = ""
authors = ["syntrice <syntrice@protonmail.com>"]
readme = "README.md"
packages = [{include = "composer_toolkit"}]

[tool.poetry.dependencies]
python = "^3.11"
music21 = "^9.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
